docs(valhalla): add Chen Liang's Valhalla contribution stats
- Add Project Valhalla section showing 11 PRs, ranked #1
- Update technical specialties to highlight javac and language features
- Link to Valhalla development activity analysis

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>